@@ -25,12 +25,12 @@
 
 mod channel;
 mod lap;
-mod run_data;
+mod run;
 mod service;
 mod xdrk_bindings;
 mod xdrk_file;
 
 pub use channel::{Channel, ChannelData, ChannelInfo, RawChannel};
 pub use lap::{Lap, LapInfo};
-pub use run_data::RunData;
+pub use run::Run;
 pub use xdrk_file::XdrkFile;
